Fixed spacing issue on pokemon component header

--- a/src/app/pokemon/pokemon.component.scss
+++ b/src/app/pokemon/pokemon.component.scss
@@ -8,7 +8,6 @@
     }
 
     &__header {
-        width: 100%;
         padding: 2rem;
 
         display: flex;
